# qml-libcamera

./: CMakeLists.txt  LICENSE  README.md  frameconverter.cpp  frameconverter.h  image.cpp  image.h  libcamera.json  libcamera.pro  plugin.cpp  test.qml
LibCamera/: qmldir
